# bbs

./: '  .env  .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/2019-10-08-080529_create_threads/: down.sql  up.sql
migrations/2019-10-08-081023_create_reses/: down.sql  up.sql
src/: entity.rs  form.rs  lib.rs  main.rs  schema.rs
src/entity/: mod.rs  res.rs  response.rs  thread.rs
src/infra/: db.rs
templates/: base.html.tera  index.html.tera  thread.html.tera
