[package]
name = "bbs"
version = "0.1.0"
authors = ["RyoNkmr <ryonakamuraryo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
chrono = "0.4.9"
sqlite = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
rust-crypto = "^0.2"
base64 = "0.10.1"
