[package]
name = "bbs"
version = "0.1.0"
authors = ["RyoNkmr <ryonakamuraryo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_contrib = {version = "0.4.10", features = ["diesel_sqlite_pool", "tera_templates"]}
chrono = { version = "0.4.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rust-crypto = "^0.2"
base64 = "0.10.1"
diesel = { version = "1.3.3", features = ["sqlite", "chrono"] }
dotenv = "0.9.0"
regex = "1"
tripcode = "0.2.1"
tap = "1.0.1"
